[tool.poetry]
name = "datainsight"
version = "0.1.0"
description = "outis pour le monitoring interne"
authors = ["Enzo Xic <enzo.c.dv1975@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
pytest = "^8.3.2"
black = "^24.4.2"
flake8 = "^7.1.0"
jupyter = "^1.0.0"
ipython = "^8.26.0"
Sphinx = "^7.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
